--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 	</dependencies>
 
   <build>
+    <finalName>menu-server</finalName>
     <plugins>
         <plugin>
             <groupId>org.springframework.boot</groupId>
