--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -4,9 +4,9 @@ on:
 jobs:
   dire_bonjour:
     runs-on: ubuntu-20.04
+    container:
+      image: ghcr.io/cicd-lectures/gitpod:latest
+      options: --user=root
     steps:
       - uses: actions/checkout@v2 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
-      - run: |
-          sudo apt-get update
-          sudo apt-get install -y cowsay
       - run: cat README.md | cowsay
