--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -10,3 +10,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
       - run: cat README.md | cowsay
+  run_maven:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - run: mvn -v
+      - run: mvn effective:pom
